Update/Install ops updated to new channel definition